Final push(for now)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <header>
             <div class="logo"></div>
-            <h1>GitHub README Generator</h1>
+            <h1>GitHub README Generator ✨</h1>
         </header>
 
         <p class="subtitle">Create professional GitHub README files with AI assistance. Powered by Google Gemini.</p>
